# ali-book

./: docusaurus.config.ts  package-lock.json  sidebars.ts  tsconfig.json
.specify/memory/: constitution.md
backend/: .env  README.md  check_dims.py  debug_imports.py  debug_qdrant.py  debug_qdrant_method.py  list_models.py  pyproject.toml  reproduce_issue.py
backend/app/: main.py
backend/app/core/: ai_client.py  config.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py
backend/app/services/: embedding_service.py  rag_service.py
backend/scripts/: index_content.py
docs/: intro.md
docs/hardware/: edge-kit.md  lab-options.md  workstation-requirements.md
docs/week-01-02/: introduction-to-physical-ai.md  sensor-systems.md
docs/week-03-05/: nodes-and-topics.md  python-packages.md  ros2-architecture.md
docs/week-06-07/: gazebo-setup.md  unity-visualization.md  urdf-sdf.md
docs/week-08-10/: isaac-sdk.md  reinforcement-learning.md  sim-to-real.md
docs/week-11-12/: bipedal-locomotion.md  interaction-design.md  manipulation.md
docs/week-13/: conversational-robotics.md  multimodal-interaction.md
history/prompts/physical-ai/: 001-project-init.prompt.md
physical-ai-textbook/: plan.md  spec.md  tasks.md
src/components/: ChatWidget.css  ChatWidget.tsx
src/components/HomepageFeatures/: index.tsx
src/css/: custom.css
src/theme/: Root.tsx
